--- a/package.json
+++ b/package.json
@@ -1,52 +1,69 @@
 {
-  "name": "react-use-flexsearch",
+  "name": "@yc-w-cn/react-use-flexsearch",
   "version": "0.2.0-next.0",
   "description": "React hook to search a FlexSearch index",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
+  "type": "module",
   "scripts": {
     "build": "NODE_ENV=production rollup -c",
-    "build:watch": "npm run build -- --watch",
-    "format": "prettier --write 'src/**/*.js' 'rollup.config.js' 'README.md'",
+    "build:watch": "pnpm run build -- --watch",
+    "format": "prettier --write 'src/**/*.ts' 'rollup.config.js' 'README.md'",
     "prebuild": "rimraf dist",
-    "prepublish": "npm run build",
+    "prepublish": "pnpm run build",
     "release": "standard-version",
     "test": "jest",
-    "test:watch": "npm run test -- --watch"
+    "test:watch": "pnpm run test -- --watch",
+    "lint": "eslint src"
   },
-  "homepage": "https://github.com/angeloashmore/react-use-flexsearch",
+  "homepage": "https://github.com/yc-w-cn/react-use-flexsearch",
   "repository": {
     "type": "git",
-    "url": "https://github.com/angeloashmore/react-use-flexsearch.git"
+    "url": "https://github.com/yc-w-cn/react-use-flexsearch.git"
   },
   "keywords": [
     "react",
     "component",
     "search",
-    "flexsearch"
+    "flexsearch",
+    "typescript"
   ],
-  "author": "Angelo Ashmore",
+  "author": "Yuchen Wang <contact@wangyuchen.cn>",
   "license": "MIT",
   "dependencies": {
-    "flexsearch": "^0.6.22"
+    "flexsearch": "^0.7.43"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.3",
-    "@babel/preset-env": "^7.3.1",
-    "@commitlint/cli": "^7.5.2",
-    "@commitlint/config-conventional": "^7.5.0",
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@commitlint/cli": "^19.0.3",
+    "@commitlint/config-conventional": "^19.0.3",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-typescript": "^11.1.6",
+    "@types/jest": "^29.5.12",
+    "@types/react": "^18.2.62",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
     "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^24.1.0",
-    "husky": "^1.3.1",
-    "jest": "^24.1.0",
-    "prettier": "^1.16.4",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
+    "babel-jest": "^29.7.0",
+    "eslint": "^8.57.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.34.0",
+    "husky": "^9.0.11",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "prettier": "^3.2.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-testing-library": "^5.8.0",
-    "rimraf": "^2.6.3",
-    "rollup": "^1.1.2",
-    "rollup-plugin-babel": "4.3.2",
-    "standard-version": "^5.0.2"
+    "rimraf": "^5.0.5",
+    "rollup": "^4.12.0",
+    "standard-version": "^9.5.0",
+    "ts-jest": "^29.1.2",
+    "tslib": "^2.6.2",
+    "typescript": "^5.3.3"
   },
   "peerDependencies": {
     "react": ">=16.8"
