--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@yc-w-cn/react-use-flexsearch",
-  "version": "0.2.0-next.0",
+  "version": "0.2.0",
   "description": "React hook to search a FlexSearch index",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
