--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,12 +12,10 @@
     "paths": {
       "*": ["node_modules/*", "src/types/*"]
     },
-    "sourceMap": true
+    "sourceMap": true,
+    "declaration": true,
+    "declarationDir": "./dist/types"
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules"]
 }
