--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,8 @@
     },
     "sourceMap": true,
     "declaration": true,
-    "declarationDir": "./dist/types"
+    "declarationDir": "./dist/types",
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules"]
+  "exclude": ["src/**/*.test.ts"]
 }
