--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "description": "React hook to search a FlexSearch index",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist/**/*"
+  ],
   "type": "module",
   "scripts": {
     "build": "NODE_ENV=production rollup -c",
