--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "author": "Yuchen Wang <contact@wangyuchen.cn>",
   "license": "MIT",
   "dependencies": {
+    "@types/flexsearch": "^0.7.6",
     "flexsearch": "^0.7.43"
   },
   "devDependencies": {
