feat: migrate flexsearch to flexsearch-ts fork

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,12 +10,11 @@
     "resolveJsonModule": true,
     "baseUrl": "./",
     "paths": {
-      "*": ["node_modules/*", "src/types/*"],
-      "flexsearch": ["node_modules/@types/flexsearch"]
+      "*": ["node_modules/*", "src/types/*"]
     },
     "sourceMap": true,
     "declaration": true,
-    "declarationDir": "./dist",
+    "declarationDir": "./dist"
   },
   "include": ["src/**/*"],
   "exclude": ["src/**/*.test.ts"]
