--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
   "author": "Yuchen Wang <contact@wangyuchen.cn>",
   "license": "MIT",
   "dependencies": {
-    "@types/flexsearch": "^0.7.6",
-    "flexsearch": "^0.7.43"
+    "flexsearch-ts": "^0.7.35"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
